working on listing cities and auth

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sherpa_app",
   "version": "0.1.0",
+  "main": "Server/index.js",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
@@ -23,5 +24,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
