implemented react-google-maps and is rendering, working on CORS issue with api

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ CONNECTION_STRING=postgres://lszaxbhztttrhj:4a48e30ce215ac63276ee0dd5fb44fbac4a9
 
 NPS_API_KEY=
 
-GOOGLE_MAPS_KEY=
+REACT_APP_GOOGLE_API_KEY=AIzaSyAhBiMZ58GJ0s7lByIQVZpEsaetOT_Rf9o
 
 SESSION_SECRET=ArnoldTheAnimal17!
