--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.2",
+    "history": "^4.7.2",
     "massive": "^5.3.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-google-maps": "^9.4.5",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
-    "redux-promise-middleware": "^5.1.1"
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,11 +35,11 @@
     "eject": "react-scripts eject"
   },
   "proxy": {
-        "/auth/callback": {
-          "target": "http://localhost:4000"
-        },
-        "/api": {
-          "target": "http://localhost:4000"
-        }
+    "/auth/callback": {
+      "target": "http://localhost:4000"
+    },
+    "/api": {
+      "target": "http://localhost:4000"
     }
+  }
 }
