--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "google-maps-react": "^2.0.2",
     "history": "^4.7.2",
     "massive": "^5.3.0",
+    "material-ui": "^0.20.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-dropzone": "^5.1.0",
     "react-google-maps": "^9.4.5",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
@@ -26,7 +28,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
     "start": "react-scripts start",
