--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.11.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -17,9 +18,12 @@
     "massive": "^5.3.0",
     "material-ui": "^0.20.2",
     "react": "^16.5.1",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.1",
     "react-dropzone": "^5.1.0",
     "react-google-maps": "^9.4.5",
+    "react-hot-loader": "^4.3.11",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -32,9 +36,9 @@
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test":  "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "proxy": {
