--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "auth0": "^2.12.0",
     "auth0-js": "^9.7.3",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "dotenv": "^6.0.0",
@@ -16,7 +15,6 @@
     "google-maps-react": "^2.0.2",
     "history": "^4.7.2",
     "massive": "^5.3.0",
-    "material-ui": "^0.20.2",
     "react": "^16.5.1",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewired": "^1.6.2",
@@ -30,6 +28,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
+    "react-star-rating": "^1.4.2",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
@@ -38,7 +37,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test":  "react-app-rewired test --env=jsdom",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "proxy": {
