--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dropzone": "^5.1.0",
     "react-google-maps": "^9.4.5",
     "react-hot-loader": "^4.3.11",
+    "react-infinite-scroll-component": "^4.2.0",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
