--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-maps-react": "^2.0.2",
     "history": "^4.7.2",
     "massive": "^5.3.0",
+    "moment": "^2.22.2",
     "react": "^16.5.1",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewired": "^1.6.2",
