--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
     "react-star-rating": "^1.4.2",
+    "reactjs-popup": "^1.3.0",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
