--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "history": "^4.7.2",
+    "http-proxy-middleware": "^0.19.0",
     "massive": "^5.3.0",
     "moment": "^2.22.2",
     "react": "^16.5.1",
@@ -27,7 +28,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.1.1",
     "react-star-rating": "^1.4.2",
     "reactjs-popup": "^1.3.0",
     "redux": "^4.0.0",
@@ -41,12 +42,10 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": {
-    "/auth/callback": {
-      "target": "http://localhost:4000"
-    },
-    "/api": {
-      "target": "http://localhost:4000"
-    }
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
