--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
     "http-proxy-middleware": "^0.19.0",
     "massive": "^5.3.0",
     "moment": "^2.22.2",
-    "react": "^16.5.1",
+    "react": "^16.6.0",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewired": "^1.6.2",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.6.0",
     "react-dropzone": "^5.1.0",
     "react-hot-loader": "^4.3.11",
-    "react-infinite-scroll-component": "^4.2.0",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -37,9 +36,9 @@
     "superagent": "^4.0.0-beta.5"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
